2004-03-20  Saito <saito@intaa.net>

	* timidity/reverb.[ch], timidity/readmidi.c:
	  Implement XG Amp Simulator (incomplete).
	  Change algorithm of Overdrive / Distortion.

2004-03-20  Takaya Nogami <t-nogami@happy.email.ne.jp>

	* timidity/darwin_a.c: 24bit output support

2004-03-19  Saito <saito@intaa.net>

	* interface/w32g_ut2.[ch], interface/w32g_i.c:
	  Set GS LCD Mode to default.
	* interface/w32g_res.rc, timidity/optcode.h, timidity/effect.c:
	  Implement "soft-clipping before waveshaping" again.

2004-03-18  Saito <saito@intaa.net>

	* timidity/optcode.h:
	  Add imuldiv28() for waveshaping.

2004-03-18  Kentaro Sato <kentaro@ranvis.com>

	* timidity/timidity.c: Bug fix.
	  Changed #extension level option's argument format.
	* doc/C/timidity.cfg.5, doc/ja_JP.eucJP/timidity.cfg.5: Updated.

2004-03-18  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/mix.c (recompute_envelope, recompute_modulation_envelope):
	  fix for -m option (was not working correctly)

2004-03-17  Saito <saito@intaa.net>

	* interface/w32g.h, interface/w32g_i.c, interface/w32g_c.c:
	  Fix GS LCD in Win32GUI interface.

2004-03-16  Saito <saito@intaa.net>

	* timidity/reverb.c, timidity/playmidi.c:
	  Bug fix.

2004-03-15  Saito <saito@intaa.net>

	* interface/w32g.h, interface/w32g_i.c, interface/w32g_c.c:
	  Support for GS LCD in Win32GUI interface.

2004-03-14  Saito <saito@intaa.net>

	* timidity/readmidi.c, timidity/reverb.[ch]:
	  Support for effect: Auto Wah (incomplete).

2004-03-13  Saito <saito@intaa.net>

	* timidity/reverb.[ch]:
	  Beautify.

2004-03-12  Saito <saito@intaa.net>

	* timidity/reverb.c:
	  Fix around effects.

2004-03-10  Kentaro Sato <kentaro@ranvis.com>

	* timidity/timidity.c:
	  Fixed an old bug preventing from specifying "pan=left" in config.

2004-03-10  Saito <saito@intaa.net>

	* timidity/readmidi.c, timidity/reverb.[ch], timidity/tables.[ch]:
	  Support for effect: Lo-Fi (incomplete), Stereo-EQ.
	* timidity/playmidi.c:
	  Fix around effects.
