@@ -1,3 +1,8 @@
+2004-03-24  TAMUKI Shoichi <tamuki@linet.gr.jp>
+
+	* interface/w32g.h, interface/w32g_c.c, interface/w32g_i.c:
+	  Fix handling of canvas mode (W32GUI version)
+
 2004-03-20  Saito <saito@intaa.net>
 
 	* timidity/reverb.[ch], timidity/readmidi.c:
